# kbchat

./: .gitignore  NOTES.md  bot.py  completion.py  database.py  dataloader.py  loader.py  milvus_loader.py  pyproject.toml  setenvs.sh  setup-milvus.py  transform.py
data/: content.txt
