[tool.poetry]
name = "kbchat"
version = "0.1.0"
description = ""
authors = ["Jett Gamboa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sentence-transformers = "^2.2.2"
milvus = "^2.1.0"
pymilvus = "2.1.0"
protobuf = "3.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
